coa-vpc-student.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "COA Hackathon VPC Student",
  "Parameters": {
    "ImageId": {
      "Type": "String"
    },
    "KeyName": {
      "Type": "String"
    },
    "Bucket": {
      "Type": "String"
    },
    "IamProfile": {
      "Type": "String"
    },
    "ControlInstanceType": {
      "Type": "String"
    },
    "ControlDiskSize": {
      "Type": "Number"
    },
    "VpcId": {
      "Type": "String"
    },
    "SecGroupAccess": {
      "Type": "String"
    },
    "RouteTable": {
      "Type": "String"
    },
    "SubnetNumber": {
      "Type": "String"
    }
  },
  "Resources": {
    "subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": { "Fn::Join": [ "", [ "192.168.", { "Ref": "SubnetNumber" }, ".0/24" ] ] },
        "VpcId": { "Ref": "VpcId" }
      }
    },
    "route": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTable" },
        "SubnetId": { "Ref": "subnet" }
      }
    },
    "secgroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Student Cluster",
        "VpcId": { "Ref": "VpcId" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
	    "SourceSecurityGroupId": { "Ref": "SecGroupAccess" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
	    "SourceSecurityGroupId": { "Ref": "SecGroupAccess" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
	    "SourceSecurityGroupId": { "Ref": "SecGroupAccess" }
          },
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
	    "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "ingress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "secgroup" },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": { "Ref": "secgroup" }
      }
    },
    "controlWaitHandle": {
      "Type": "AWS::CloudFormation::WaitConditionHandle",
      "Properties": { }
    },
    "controlWaitCondition": {
      "Type": "AWS::CloudFormation::WaitCondition",
      "Properties": {
        "Handle": { "Ref": "controlWaitHandle" },
	"Timeout": "1200",
	"Count": "1"
      }
    },
    "control": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": { "Ref": "ImageId" },
        "InstanceType": { "Ref": "ControlInstanceType" },
        "KeyName": { "Ref": "KeyName" },
        "SecurityGroupIds": [ { "Ref": "secgroup" } ],
        "IamInstanceProfile": { "Ref": "IamProfile" },
        "SubnetId": { "Ref": "subnet" },
        "PrivateIpAddress": { "Fn::Join": [ "", [ "192.168.", { "Ref": "SubnetNumber" }, ".100" ] ] },
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/xvda",
            "Ebs": { "VolumeSize": { "Ref": "ControlDiskSize" } }
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash -xe\n",
		"yum -y update\n",
		"yum -y install shellinabox\n",
		"sed -i -e 's/4200/80/' /etc/sysconfig/shellinaboxd\n",
		"sed -i -e 's/LOGIN/SSH/' /etc/sysconfig/shellinaboxd\n",
		"sed -i -e 's/--disable-ssl-menu/--no-beep --disable-ssl --disable-ssl-menu/' /etc/sysconfig/shellinaboxd\n",
		"hostname ip-192-168-", { "Ref": "SubnetNumber" }, "-100.ec2.internal\n",
		"service shellinaboxd start\n",
		"sed -i -e /PasswordAuth/d /etc/ssh/sshd_config\n",
		"service sshd restart\n",
		"openssl rand 1000 | strings | grep -io [[:alnum:]] | head -n 16 | tr -d '\n' > /root/passwd.", { "Ref": "SubnetNumber" }, "\n",
		"usermod -p $(openssl passwd -1 `cat /root/passwd.", { "Ref": "SubnetNumber" }, "`) ec2-user\n",
		"echo >> /root/passwd.", { "Ref": "SubnetNumber" }, "\n",
                "aws s3 cp /root/passwd.", { "Ref": "SubnetNumber" }, " s3://", { "Ref": "Bucket" }, "\n",
		"mkdir /home/ec2-user/.jupyter\n",
                "echo 'c.NotebookApp.allow_origin = \"*\"' >> /home/ec2-user/.jupyter/jupyter_notebook_config.py\n",
                "echo 'c.NotebookApp.base_url = \"/student", { "Ref": "SubnetNumber" }, "/jupyter\"' >> /home/ec2-user/.jupyter/jupyter_notebook_config.py\n",
                "echo 'c.NotebookApp.ip = \"0.0.0.0\"' >> /home/ec2-user/.jupyter/jupyter_notebook_config.py\n",
                "echo 'c.NotebookApp.open_browser = False' >> /home/ec2-user/.jupyter/jupyter_notebook_config.py\n",
                "echo 'c.NotebookApp.port = 8080' >> /home/ec2-user/.jupyter/jupyter_notebook_config.py\n",
                "/opt/aws/bin/cfn-signal '", { "Ref": "controlWaitHandle" }, "' \n"
              ]
            ]
          }
        }
      }
    }
  }
}
